--- a/BlueSky-Mountain-Solid/cinnamon/cinnamon.css
+++ b/BlueSky-Mountain-Solid/cinnamon/cinnamon.css
@@ -747,7 +747,6 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .calendar-day {
   border-width: 0;
   color: rgba(15, 20, 35, 0.8);
-  border: 2px solid transparent;
 }
 .calendar-day:hover {
   background-color: rgba(0, 0, 0, 0.1);
